WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58721
Pages in the PageCache don't have the correct visited link coloring after being restored
https://bugs.webkit.org/show_bug.cgi?id=58721
Summary
Pages in the PageCache don't have the correct visited link coloring after bei...
Sam Weinig
Reported
2011-04-15 19:02:01 PDT
Pages in the PageCache don't have the correct visited link coloring after being restored
Attachments
Patch
(11.23 KB, patch)
2011-04-15 19:05 PDT
,
Sam Weinig
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-04-15 19:05:33 PDT
Created
attachment 89904
[details]
Patch
WebKit Review Bot
Comment 2
2011-04-15 19:08:14 PDT
Attachment 89904
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit2/WebProcess/WebProcess.cpp:74: "WebCore/MemoryCache.h" already included at Source/WebKit2/WebProcess/WebProcess.cpp:60 [build/include] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2011-04-16 12:31:48 PDT
Committed
r84091
: <
http://trac.webkit.org/changeset/84091
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug