2011-04-16  Sam Weinig  <sam@webkit.org>

Reviewed by Simon Fraser.

        Pages in the PageCache don't have the correct visited link coloring after being restored
        https://bugs.webkit.org/show_bug.cgi?id=58721

        * WebCore.exp.in:
        Add export of markPagesForVistedLinkStyleRecalc for use by WebKit2.

        * history/CachedPage.cpp:
        (WebCore::CachedPage::CachedPage):
        (WebCore::CachedPage::restore):
        (WebCore::CachedPage::clear):
        * history/CachedPage.h:
        (WebCore::CachedPage::markForVistedLinkStyleRecalc):
        Add bit, set by calling markForVistedLinkStyleRecalc, which forces a visited link
        style recalc when being restored.

        * history/PageCache.h:
        * history/PageCache.cpp:
        (WebCore::PageCache::markPagesForVistedLinkStyleRecalc):
        Mark all pages in the page cache as requiring visited link style recalc.

        * page/PageGroup.cpp:
        (WebCore::PageGroup::addVisitedLink):
        (WebCore::PageGroup::removeVisitedLinks):
        (WebCore::PageGroup::removeAllVisitedLinks):
        Set dirty bit when changing any visited link information.

2011-04-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Simon Fraser.

        Pages in the PageCache don't have the correct visited link coloring after being restored
        https://bugs.webkit.org/show_bug.cgi?id=58721

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::visitedLinkStateChanged):
        (WebKit::WebProcess::allVisitedLinkStateChanged):
        Mark all pages in the page cache as needing visited link style recalc
        whenever visited link information changes.


Canonical link: https://commits.webkit.org/73832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84091 268f45cc-cd09-0410-ab3c-d52691b4dbfc